<resources>
    <string name="app_name">My Journal</string>
    <string name="my_text">my</string>
    <string name="journal_text">journal</string>
    <string name="sign_in_text">Sign in</string>
    <string name="with_text">with</string>
    <string name="your_title_here">Your title here</string>
    <string name="done">Done</string>
    <string name="cancel">cancel</string>
    <string name="plus_sign">+</string>
    <string name="cross_sign">-</string>
    <string name="journal_is_empty">journal is empty</string>
    <string name="start_typing">start typing</string>
</resources>
