<?xml version="1.0" encoding="utf-8"?>
<app:android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView_add_new_journal"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.myjournal.NewPostActivity"
    app:cardBackgroundColor="@color/cardview_light_background">

<RelativeLayout
    android:id="@+id/add_new_journal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <android.support.v7.widget.CardView
        android:id="@+id/cancel_journal"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:text="@string/cancel"
            android:textColor="@color/cardview_light_background"
            android:textSize="15sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/fab_submit_post"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:text="@string/done"
            android:textColor="@color/light_blue"
            android:textSize="15sp" />
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cancel_journal"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/field_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/your_title_here"
            android:inputType="text"
            android:paddingEnd="0dp"
            android:paddingLeft="16dp"
            android:paddingRight="0dp"
            android:paddingStart="16dp" />

        <EditText
            android:id="@+id/field_body"
            style="@android:style/Widget.DeviceDefault.EditText"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:gravity="start"
            android:hint="@string/start_typing"
            android:inputType="textMultiLine"
            android:paddingEnd="0dp"
            android:paddingLeft="16dp"
            android:paddingRight="0dp"
            android:paddingStart="16dp"
            android:selectAllOnFocus="false"
            android:textAlignment="viewStart" />
    </LinearLayout>
</RelativeLayout>
</app:android.support.v7.widget.CardView>
